Adding link to css file

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
  <head>
    <meta charset="utf-8">
    <title>Tribute page</title>
+   <link rel="stylesheet" href="tribute.css">
  </head>
  <body>
    <div id="main"> 
